--- a/Style1.css
+++ b/Style1.css
@@ -74,8 +74,18 @@ img#flag {
     font-size: 2.5rem;
   }
 }
+.information{
+  background: rgba(0, 0, 0, 0.829) url('bg2.svg');
+  height: 120vh;
+  background-blend-mode: darken;
+}
 @media screen and (max-width: 500px){
   .board {
     column-count: 1;
+  }
+  .information{
+    background: rgba(0, 0, 0, 0.829) url('bg2.svg');
+    height: 120vh;
+    background-blend-mode: darken;
   }
 }
